--- a/sbs_autopingpost_11Sep25.html
+++ b/sbs_autopingpost_11Sep25.html
@@ -310,7 +310,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/sbs_autopingpost_11Sep25.js"></script>
+  <script src="https://js.formifyweb.com/sbs_autopingpost_11Sep25.js?ver=1"></script>
 
     
 
@@ -328,3 +328,4 @@
  
 </body>
 </html>
+
