--- a/cyp_bathroom_apiPosting_wrm.html
+++ b/cyp_bathroom_apiPosting_wrm.html
@@ -146,6 +146,11 @@
     <option value="110025">110025(www.roofworksusa.com)</option>
     <option value="110026">110026(www.roofingkingusa.com)</option>
     <option value="110027">110027(www.usahome-roof.com/roofing-material/)</option>
+     <option value="110028">110028(www.usaroofingpdx.com)</option>
+    <option value="110029">110029(www.platinumroofllc.com)</option>
+    <option value="110030">110030(www.roofriteri.com/4-most-common-roofing-services/)</option>
+    <option value="110031">110031(www.pmhoa.pro)</option>
+    <option value="110032">110032(www.petro.com)</option>
    
   </select>
 </div>
@@ -160,6 +165,12 @@
     <option value="www.roofworksusa.com">www.roofworksusa.com</option>
     <option value="www.roofingkingusa.com">www.roofingkingusa.com</option>
     <option value="www.usahome-roof.com/roofing-material/">www.usahome-roof.com/roofing-material/</option>
+    <option value="www.usaroofingpdx.com">www.usaroofingpdx.com</option>
+    <option value="www.platinumroofllc.com">www.platinumroofllc.com</option>
+    <option value="www.roofriteri.com/4-most-common-roofing-services/">www.roofriteri.com/4-most-common-roofing-services/</option>
+    <option value="www.pmhoa.pro">www.pmhoa.pro</option>
+    <option value="www.petro.com">www.petro.com</option>
+    
   </select>
 </div>
 
@@ -178,6 +189,7 @@
     </script>
 </body>
 </html>
+
 
 
 
