--- a/cyp_windows_apiPosting_wrm.html
+++ b/cyp_windows_apiPosting_wrm.html
@@ -161,14 +161,14 @@
      <div class="col-md-6">
   <label class="form-label">Source Id</label>
   <select class="form-control" id="source_id" required>
-    <option value="110021">110021 (www.shelterfix.com)</option>
+    <option value="110021">110021(www.shelterfix.com)</option>
     <option value="110022">110022(www.simonroofing.com)</option>
     <option value="110023">110023(www.championroofing-usa.com)</option>
     <option value="110024">110024(www.remedyroofing.com/remedy-roofing-services/roof-repair/)</option>
     <option value="110025">110025(www.roofworksusa.com)</option>
     <option value="110026">110026(www.roofingkingusa.com)</option>
     <option value="110027">110027(www.usahome-roof.com/roofing-material/)</option>
-    <option value="110028">110028(www.usaroofingpdx.com)</option>
+     <option value="110028">110028(www.usaroofingpdx.com)</option>
     <option value="110029">110029(www.platinumroofllc.com)</option>
     <option value="110030">110030(www.roofriteri.com/4-most-common-roofing-services/)</option>
     <option value="110031">110031(www.pmhoa.pro)</option>
@@ -214,7 +214,7 @@
 <option value="110071">110071 (www.houzz.com)</option>
 <option value="110072">110072 (www.homeadvisor.com)</option>
 <option value="110073">110073 (www.angi.com)</option>
-<option value="110074">110074 (www.thisoldhouse.com/ideas)</option>
+<option value="110074">110074 (www.thisoldhouse.com)</option>
 <option value="110075">110075 (www.renewalbyandersen.com)</option>
 <option value="110076">110076 (www.windowworld.com)</option>
 <option value="110077">110077 (www.championhomeexteriors.com)</option>
@@ -227,7 +227,7 @@
 <option value="110084">110084 (www.renovationhometeam.com)</option>
 <option value="110085">110085 (www.renovationfind.com)</option>
 <option value="110086">110086 (www.blockrenovation.com)</option>
-<option value="110087">110087 (www.directorii.com/us/bathroom-remodel)</option>
+<option value="110087">110087 (www.directorii.com/)</option>
 <option value="110088">110088 (www.valorhome.com)</option>
 <option value="110089">110089 (www.nulookhomedesign.com)</option>
 <option value="110090">110090 (www.unifiedhomeremodeling.com)</option>
@@ -241,8 +241,8 @@
 <option value="110098">110098 (www.americanrenovationsus.com)</option>
 <option value="110099">110099 (www.remodelrenovationusa.com)</option>
 <option value="110100">110100 (www.remodelusallc.com)</option>
-<option value="110101">110101 (www.windowsdirectusa.com/middletown-oh)</option>
-<option value="110102">110102 (www.rayproroofing.com/bathroom-remodeling)</option>
+<option value="110101">110101 (www.windowsdirectusa.com)</option>
+<option value="110102">110102 (www.rayproroofing.com)</option>
 
 
   </select>
@@ -251,14 +251,14 @@
 <div class="col-md-6">
   <label class="form-label">Landing Page URL</label>
   <select class="form-control" id="landing_page_url" required>
-     <option value="www.shelterfix.com" selected>www.shelterfix.com</option>
-     <option value="www.simonroofing.com">www.simonroofing.com</option>
-     <option value="www.championroofing-usa.com">www.championroofing-usa.com</option>
-     <option value="www.remedyroofing.com/remedy-roofing-services/roof-repair/">www.remedyroofing.com/remedy-roofing-services/roof-repair/</option>
-     <option value="www.roofworksusa.com">www.roofworksusa.com</option>
-     <option value="www.roofingkingusa.com">www.roofingkingusa.com</option>
-     <option value="www.usahome-roof.com/roofing-material/">www.usahome-roof.com/roofing-material/</option>
-     <option value="www.usaroofingpdx.com">www.usaroofingpdx.com</option>
+     <option value="www.shelterfix.com">www.shelterfix.com</option>
+    <option value="www.simonroofing.com">www.simonroofing.com</option>
+    <option value="www.championroofing-usa.com">www.championroofing-usa.com</option>
+    <option value="www.remedyroofing.com/remedy-roofing-services/roof-repair/">www.remedyroofing.com/remedy-roofing-services/roof-repair/</option>
+    <option value="www.roofworksusa.com">www.roofworksusa.com</option>
+    <option value="www.roofingkingusa.com">www.roofingkingusa.com</option>
+    <option value="www.usahome-roof.com/roofing-material/">www.usahome-roof.com/roofing-material/</option>
+    <option value="www.usaroofingpdx.com">www.usaroofingpdx.com</option>
     <option value="www.platinumroofllc.com">www.platinumroofllc.com</option>
     <option value="www.roofriteri.com/4-most-common-roofing-services/">www.roofriteri.com/4-most-common-roofing-services/</option>
     <option value="www.pmhoa.pro">www.pmhoa.pro</option>
@@ -304,7 +304,7 @@
 <option value="www.houzz.com">www.houzz.com</option>
 <option value="www.homeadvisor.com">www.homeadvisor.com</option>
 <option value="www.angi.com">www.angi.com</option>
-<option value="www.thisoldhouse.com/ideas">www.thisoldhouse.com/ideas</option>
+<option value="www.thisoldhouse.com">www.thisoldhouse.com</option>
 <option value="www.renewalbyandersen.com">www.renewalbyandersen.com</option>
 <option value="www.windowworld.com">www.windowworld.com</option>
 <option value="www.championhomeexteriors.com">www.championhomeexteriors.com</option>
@@ -317,7 +317,7 @@
 <option value="www.renovationhometeam.com">www.renovationhometeam.com</option>
 <option value="www.renovationfind.com">www.renovationfind.com</option>
 <option value="www.blockrenovation.com">www.blockrenovation.com</option>
-<option value="www.directorii.com/us/bathroom-remodel">www.directorii.com/us/bathroom-remodel</option>
+<option value="www.directorii.com">www.directorii.com</option>
 <option value="www.valorhome.com">www.valorhome.com</option>
 <option value="www.nulookhomedesign.com">www.nulookhomedesign.com</option>
 <option value="www.unifiedhomeremodeling.com">www.unifiedhomeremodeling.com</option>
@@ -331,8 +331,9 @@
 <option value="www.americanrenovationsus.com">www.americanrenovationsus.com</option>
 <option value="www.remodelrenovationusa.com">www.remodelrenovationusa.com</option>
 <option value="www.remodelusallc.com">www.remodelusallc.com</option>
-<option value="www.windowsdirectusa.com/middletown-oh">www.windowsdirectusa.com/middletown-oh</option>
-<option value="www.rayproroofing.com/bathroom-remodeling">www.rayproroofing.com/bathroom-remodeling</option>
+<option value="www.windowsdirectusa.com">www.windowsdirectusa.com</option>
+<option value="www.rayproroofing.com">www.rayproroofing.com</option>
+
     
    
     
@@ -355,6 +356,7 @@
 </script>
 </body>
 </html>
+
 
 
 
