--- a/cyp_bathroom_apiPosting_wrm.html
+++ b/cyp_bathroom_apiPosting_wrm.html
@@ -192,7 +192,7 @@
 <option value="110071">110071 (www.houzz.com)</option>
 <option value="110072">110072 (www.homeadvisor.com)</option>
 <option value="110073">110073 (www.angi.com)</option>
-<option value="110074">110074 (www.thisoldhouse.com/ideas)</option>
+<option value="110074">110074 (www.thisoldhouse.com)</option>
 <option value="110075">110075 (www.renewalbyandersen.com)</option>
 <option value="110076">110076 (www.windowworld.com)</option>
 <option value="110077">110077 (www.championhomeexteriors.com)</option>
@@ -205,7 +205,7 @@
 <option value="110084">110084 (www.renovationhometeam.com)</option>
 <option value="110085">110085 (www.renovationfind.com)</option>
 <option value="110086">110086 (www.blockrenovation.com)</option>
-<option value="110087">110087 (www.directorii.com/us/bathroom-remodel)</option>
+<option value="110087">110087 (www.directorii.com/)</option>
 <option value="110088">110088 (www.valorhome.com)</option>
 <option value="110089">110089 (www.nulookhomedesign.com)</option>
 <option value="110090">110090 (www.unifiedhomeremodeling.com)</option>
@@ -219,8 +219,8 @@
 <option value="110098">110098 (www.americanrenovationsus.com)</option>
 <option value="110099">110099 (www.remodelrenovationusa.com)</option>
 <option value="110100">110100 (www.remodelusallc.com)</option>
-<option value="110101">110101 (www.windowsdirectusa.com/middletown-oh)</option>
-<option value="110102">110102 (www.rayproroofing.com/bathroom-remodeling)</option>
+<option value="110101">110101 (www.windowsdirectusa.com)</option>
+<option value="110102">110102 (www.rayproroofing.com)</option>
 
    
   </select>
@@ -282,7 +282,7 @@
 <option value="www.houzz.com">www.houzz.com</option>
 <option value="www.homeadvisor.com">www.homeadvisor.com</option>
 <option value="www.angi.com">www.angi.com</option>
-<option value="www.thisoldhouse.com/ideas">www.thisoldhouse.com/ideas</option>
+<option value="www.thisoldhouse.com">www.thisoldhouse.com</option>
 <option value="www.renewalbyandersen.com">www.renewalbyandersen.com</option>
 <option value="www.windowworld.com">www.windowworld.com</option>
 <option value="www.championhomeexteriors.com">www.championhomeexteriors.com</option>
@@ -295,7 +295,7 @@
 <option value="www.renovationhometeam.com">www.renovationhometeam.com</option>
 <option value="www.renovationfind.com">www.renovationfind.com</option>
 <option value="www.blockrenovation.com">www.blockrenovation.com</option>
-<option value="www.directorii.com/us/bathroom-remodel">www.directorii.com/us/bathroom-remodel</option>
+<option value="www.directorii.com">www.directorii.com</option>
 <option value="www.valorhome.com">www.valorhome.com</option>
 <option value="www.nulookhomedesign.com">www.nulookhomedesign.com</option>
 <option value="www.unifiedhomeremodeling.com">www.unifiedhomeremodeling.com</option>
@@ -309,8 +309,8 @@
 <option value="www.americanrenovationsus.com">www.americanrenovationsus.com</option>
 <option value="www.remodelrenovationusa.com">www.remodelrenovationusa.com</option>
 <option value="www.remodelusallc.com">www.remodelusallc.com</option>
-<option value="www.windowsdirectusa.com/middletown-oh">www.windowsdirectusa.com/middletown-oh</option>
-<option value="www.rayproroofing.com/bathroom-remodeling">www.rayproroofing.com/bathroom-remodeling</option>
+<option value="www.windowsdirectusa.com">www.windowsdirectusa.com</option>
+<option value="www.rayproroofing.com">www.rayproroofing.com</option>
 
 
     
@@ -332,6 +332,7 @@
     </script>
 </body>
 </html>
+
 
 
 
