--- a/Pv_windows_apiPosting_wrm.html
+++ b/Pv_windows_apiPosting_wrm.html
@@ -295,6 +295,14 @@
     
   </select>
 </div>
+    <div class="row">
+<div class="col-md-12">
+  <div class="form-group">
+    <label for="trusted_form_cert_url">Trusted Form</label>
+    <input type="text" class="form-control" id="trusted_form_cert_url" placeholder="Trusted Form URL" required>
+  </div>
+</div>
+</div>
 
 
     <div class="col-12">
@@ -312,6 +320,7 @@
 </script>
 </body>
 </html>
+
 
 
 
