--- a/Pv_roofing_apiPosting_wrm.html
+++ b/Pv_roofing_apiPosting_wrm.html
@@ -305,7 +305,14 @@
     
   </select>
 </div>
-
+<div class="row">
+<div class="col-md-12">
+  <div class="form-group">
+    <label for="trusted_form_cert_url">Trusted Form</label>
+    <input type="text" class="form-control" id="trusted_form_cert_url" placeholder="Trusted Form URL" required>
+  </div>
+</div>
+</div>
 
     <div class="col-12">
       <button type="submit" class="btn btn-primary">Submit Lead</button>
@@ -320,6 +327,7 @@
 </script>
 </body>
 </html>
+
 
 
 
