--- a/Pv_bathroom_apiPosting_wrm.html
+++ b/Pv_bathroom_apiPosting_wrm.html
@@ -142,6 +142,8 @@
     <option value="80021">80021 (www.action-roof.com)</option>
     <option value="80022">80022 (www.meraki-roofing.com)</option>
     <option value="80023">80023 (www.eeckc.com)</option>    
+    <option value="80024">80024 (www.yourhomeimprovementco.com)</option> 
+    <option value="80025">80025 (www.hansons.com)</option> 
  
     
   </select>
@@ -152,7 +154,9 @@
   <select class="form-control" id="landing_page_url" required>
      <option value="www.action-roof.com" selected>www.action-roof.com</option>
      <option value="www.meraki-roofing.com" selected>www.meraki-roofing.com</option>
-    <option value="www.eeckc.com<">www.eeckc.com</option>     
+    <option value="www.eeckc.com<">www.eeckc.com</option>  
+    <option value="www.yourhomeimprovementco.com<">www.yourhomeimprovementco.com</option> 
+    <option value="www.hansons.com<">www.hansons.com</option> 
   </select>
 </div>
 <div class="row">
@@ -178,6 +182,7 @@
     </script>
 </body>
 </html>
+
 
 
 
