--- a/Pv_clients_ApiPostingPortal.html
+++ b/Pv_clients_ApiPostingPortal.html
@@ -78,6 +78,27 @@
     </div>
   </div>
 
+  <div class="row g-4 justify-content-center">
+    <div class="col-md-4">
+      <div class="card-box hvac" onclick="window.location.href='https://forms.formifyweb.com/Pv_hvac_apiPosting_wrm.html'">
+        <h3>Hvac</h3>
+        <p>Post to WRM - Hvac</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card-box gutter" onclick="window.location.href='https://forms.formifyweb.com/Pv_gutter_apiPosting_wrm.html'">
+        <h3>Gutter</h3>
+        <p>Post to WRM - Gutter</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card-box plumbing" onclick="window.location.href='https://forms.formifyweb.com/Pv_plumbing_apiPosting_wrm.html'">
+        <h3>Plumbing</h3>
+        <p>Post to WRM - Plumbing</p>
+      </div>
+    </div>
+  </div>
+
   <!-- Client X -->
   <h2>Client X</h2>
   <div class="row g-4 justify-content-center">
@@ -127,4 +148,5 @@
 
 </body>
 </html>
+
 
