--- a/Pv_clients_ApiPostingPortal.html
+++ b/Pv_clients_ApiPostingPortal.html
@@ -35,6 +35,15 @@
     .roofing {
       background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);
     }
+    .hvac {
+      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+    }
+    .gutter {
+      background: linear-gradient(135deg, #ff758c 0%, #ff7eb3 100%);
+    }
+    .plumbing {
+      background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);
+    }
     .empty {
       background: linear-gradient(135deg, #dfe9f3 0%, #ffffff 100%);
       color: #555;
@@ -148,5 +157,6 @@
 
 </body>
 </html>
+
 
 
