--- a/Pv_clients_ApiPostingPortal.html
+++ b/Pv_clients_ApiPostingPortal.html
@@ -44,6 +44,9 @@
 .plumbing {
   background: linear-gradient(135deg, #141e30 0%, #243b55 100%);
 }
+.solar {
+  background: linear-gradient(135deg, #0f2027 0%, #203a43 50%, #2c5364 100%);
+}
     .empty {
       background: linear-gradient(135deg, #dfe9f3 0%, #ffffff 100%);
       color: #555;
@@ -108,6 +111,14 @@
       </div>
     </div>
   </div>
+  div class="row g-4 justify-content-center">
+    <div class="col-md-4">
+      <div class="card-box solar" onclick="window.location.href='https://forms.formifyweb.com/Pv_solar_apiPosting_wrm.html'">
+        <h3>Solar</h3>
+        <p>Post to WRM - Solar</p>
+      </div>
+    </div>
+</div>
 
   <!-- Client X -->
   <h2>Client X</h2>
@@ -158,6 +169,7 @@
 
 </body>
 </html>
+
 
 
 
