--- a/Pv_clients_ApiPostingPortal.html
+++ b/Pv_clients_ApiPostingPortal.html
@@ -46,7 +46,7 @@
   background: linear-gradient(135deg, #141e30 0%, #243b55 100%);
 }
 .solar {
-  background: linear-gradient(135deg, #0f2027 0%, #203a43 50%, #2c5364 100%);
+  background: linear-gradient(135deg, #2b0d0d 0%, #4a1a1a 50%, #6b2d2d 100%);
 }
     .empty {
       background: linear-gradient(135deg, #dfe9f3 0%, #ffffff 100%);
@@ -170,6 +170,7 @@
 
 </body>
 </html>
+
 
 
 
