--- a/PV_autopingpost_1oct25.html
+++ b/PV_autopingpost_1oct25.html
@@ -136,7 +136,7 @@
 <div class="col-md-4">
       <div class="form-group">
         <label for="zipcode">Zipcode</label>
-        <input type="text" class="form-control" id="zip" placeholder="5 digit" required>
+        <input type="text" class="form-control" id="zip" placeholder="Enter 5 digit Zipcode" required>
       </div>
     </div>
 
@@ -174,7 +174,7 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <label for="driver1_credit_rating">Driver 1 Credit Rating</label>
-                        <input type="text" class="form-control" id="driver1_credit_rating" placeholder="" required>
+                        <input type="text" class="form-control" id="driver1_credit_rating" placeholder="e.g Good" required>
                         
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <label for="relationshiptoapplicant">Relationship To Applicant</label>
-                        <input type="text" class="form-control" id="relationshiptoapplicant" placeholder="" required>
+                        <input type="text" class="form-control" id="relationshiptoapplicant" placeholder="e.g Brother" required>
                     </div>
                 </div>
 </div>
@@ -315,3 +315,4 @@
  
 </body>
 </html>
+
