--- a/Pv_auto_tdpingpost3Oct.html
+++ b/Pv_auto_tdpingpost3Oct.html
@@ -162,23 +162,16 @@
 <div class="row">
 <div class="col-3">
   <section class="mb-3">
-    <label
-      for="dob"
-      class="form-label fw-semibold"
-    >
-      Date of Birth
-    </label>
-
+    <label for="dob" class="form-label fw-semibold">Date of Birth</label>
     <input
-      type="datetime-local"
+      type="date"
       class="form-control"
       id="dob"
-      name="Date of Birth"
-      value=""
+      name="dob"
       required
     />
-</section>
-</div>                
+  </section>
+</div>          
 <div class="col-md-3">
                     <div class="form-group">
                         <label for="residence_status">Residence Status</label>
@@ -324,3 +317,4 @@
  
 </body>
 </html>
+
