--- a/Phoenix_Med_tdpost_6oct.html
+++ b/Phoenix_Med_tdpost_6oct.html
@@ -41,7 +41,7 @@
 <div class="row">
 <div class="col-md-12">
     <div class="form-group">
-      <label for="phone_home">Phone ex: 2108573827</label>
+      <label for="phone_home">CID</label>
       <input type="text" class="form-control" id="caller_id" placeholder="10 digits US number" required>
     </div>
 </div>
@@ -74,3 +74,4 @@
     </script>
 </body>
 </html>
+
