--- a/Phoenix_Med_tdpost_6oct.html
+++ b/Phoenix_Med_tdpost_6oct.html
@@ -39,12 +39,44 @@
    <form id="leadForm">
 
 <div class="row">
-<div class="col-md-12">
+
+  <div class="col-md-6">
+    <div class="form-group">
+      <label for="first_name">First Name</label>
+      <input type="text" class="form-control" id="first_name" placeholder="Enter First Name e.g John">
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="form-group">
+      <label for="last_name">Last Name</label>
+      <input type="text" class="form-control" id="last_name" placeholder="Last name e.g smith">
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  
+<div class="col-md-4">
     <div class="form-group">
       <label for="phone_home">CID</label>
       <input type="text" class="form-control" id="caller_id" placeholder="10 digits US number" required>
     </div>
 </div>
+  <div class="col-md-4">
+    <div class="form-group">
+      <label for="age">Age</label>
+      <input type="number" class="form-control" id="age" placeholder="Enter Age e.g 30">
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="form-group">
+      <label for="zip">Zip</label>
+      <input type="text" class="form-control" id="zip" placeholder="Enter 5 digit Zip code">
+    </div>
+  </div>
+
+  
 </div>
 
 
@@ -74,6 +106,7 @@
     </script>
 </body>
 </html>
+
 
 
 
