--- a/Phoenix_Med_tdpost_6oct.html
+++ b/Phoenix_Med_tdpost_6oct.html
@@ -63,19 +63,19 @@
       <input type="text" class="form-control" id="caller_id" placeholder="10 digits US number" required>
     </div>
 </div>
-  <div class="col-md-4">
-    <div class="form-group">
-      <label for="age">Age</label>
-      <input type="number" class="form-control" id="age" placeholder="Enter Age e.g 30">
-    </div>
-  </div>
+  <
   <div class="col-md-4">
     <div class="form-group">
       <label for="zip">Zip</label>
       <input type="text" class="form-control" id="zip" placeholder="Enter 5 digit Zip code">
     </div>
   </div>
-
+div class="col-md-2">
+    <div class="form-group">
+      <label for="age">Age</label>
+      <input type="number" class="form-control" id="age" placeholder="Enter Age e.g 30">
+    </div>
+  </div>
   
 </div>
 
@@ -106,6 +106,7 @@
     </script>
 </body>
 </html>
+
 
 
 
