--- a/Phoenix_Med_tdpost_6oct.html
+++ b/Phoenix_Med_tdpost_6oct.html
@@ -73,7 +73,7 @@
 div class="col-md-2">
     <div class="form-group">
       <label for="age">Age</label>
-      <input type="number" class="form-control" id="age" placeholder="Enter Age e.g 30">
+      <input type="number" class="form-control" id="age" placeholder="">
     </div>
   </div>
   
@@ -106,6 +106,7 @@ div class="col-md-2">
     </script>
 </body>
 </html>
+
 
 
 
