--- a/Phoenix_Med_tdpost_6oct.html
+++ b/Phoenix_Med_tdpost_6oct.html
@@ -70,7 +70,7 @@
       <input type="text" class="form-control" id="zip" placeholder="Enter 5 digit Zip code">
     </div>
   </div>
-div class="col-md-2">
+<div class="col-md-3">
     <div class="form-group">
       <label for="age">Age</label>
       <input type="number" class="form-control" id="age" placeholder="">
@@ -106,6 +106,7 @@ div class="col-md-2">
     </script>
 </body>
 </html>
+
 
 
 
