--- a/Phoenix_Med_tdpost_6oct.html
+++ b/Phoenix_Med_tdpost_6oct.html
@@ -73,7 +73,7 @@
 <div class="col-md-3">
     <div class="form-group">
       <label for="age">Age</label>
-      <input type="number" class="form-control" id="age" placeholder="">
+      <input type="number" class="form-control" id="age" placeholder="Enter Age">
     </div>
   </div>
   
@@ -116,6 +116,7 @@
     </script>
 </body>
 </html>
+
 
 
 
