--- a/SS_ACA_leadposting_3oct25.html
+++ b/SS_ACA_leadposting_3oct25.html
@@ -424,7 +424,7 @@
             };
 
             // Set the POST URL
-            const url = 'https://prod-91.westus.logic.azure.com/workflows/16250eca33614d4992fc4bc4b8af69cf/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=NV1jCjTmiPkMe4VrjqnbKvQiKRi2XeGCJgCtH2tSUy4';
+            const url = 'https://defaultf627e282ecc74de9b64dfcfbe7a9db.02.environment.api.powerplatform.com/powerautomate/automations/direct/workflows/16250eca33614d4992fc4bc4b8af69cf/triggers/manual/paths/invoke?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=04utRPkzgtTiUSynDortmiuwVLkCADx-V0JmiW33J9k';
             
             fetch(url, {
                 method: 'POST',
