--- a/provoice_rtb_9oct25.html
+++ b/provoice_rtb_9oct25.html
@@ -142,8 +142,8 @@
 
 
   <div class="row">
-    <div class="col-md-12 d-flex justify-content-center">
-      <button type="submit" class="btn btn-primary px-4 py-2">Submit</button>
+    <div class="col-md-12">
+      <button type="submit" class="btn btn-primary">Submit</button>
     </div>
   </div>
 </form>
@@ -165,3 +165,4 @@
     </script>
 </body>
 </html>
+
