--- a/pv_medicare_apiposting.html
+++ b/pv_medicare_apiposting.html
@@ -317,7 +317,7 @@
   </form>
 </div>
 
-<script src="https://js.formifyweb.com/pv_medicare_apiposting"></script>
+<script src="https://js.formifyweb.com/pv_medicare_apiposting.js"></script>
   <script>
         document.addEventListener("contextmenu", function (e) {
             e.preventDefault(); // Prevent the context menu from appearing
@@ -326,3 +326,4 @@
 </body>
 
 </html>
+
