--- a/pv_medicare_apiposting.html
+++ b/pv_medicare_apiposting.html
@@ -209,6 +209,16 @@
           <label class="form-label">Household Income ($)</label>
           <input type="number" class="form-control" id="household_income" required>
         </div>
+
+        <div class="col-md-6">
+          <label class="form-label">Marital Status</label>
+          <select class="form-select" id="marital_status" required>
+            <option value="single">Single</option>
+            <option value="married">Married</option>
+            <option value="divorced">Divorced</option>
+          </select>
+        </div>
+        
         <div class="col-md-6">
           <label class="form-label">Currently Employed</label>
           <select class="form-select" id="currently_employed" required>
@@ -326,6 +336,7 @@
 </body>
 
 </html>
+
 
 
 
