--- a/ss_medicare_apiposting.html
+++ b/ss_medicare_apiposting.html
@@ -317,11 +317,12 @@
   </form>
 </div>
 
-<script src="http://js.formifyweb.com/ss_medicare_apiposting.js"></script>
+<script src="http://js.formifyweb.com/ss_medicare_apiposting.js?ver=1"></script>
   <script>
         document.addEventListener("contextmenu", function (e) {
             e.preventDefault(); // Prevent the context menu from appearing
         });
     </script>
 </body>
+
 </html>
