--- a/ss_medicare_apiposting.html
+++ b/ss_medicare_apiposting.html
@@ -317,7 +317,7 @@
   </form>
 </div>
 
-<script src="http://js.formifyweb.com/ss_medicare_apiposting.js?ver=1"></script>
+<script src="https://js.formifyweb.com/ss_medicare_apiposting.js?ver=1"></script>
   <script>
         document.addEventListener("contextmenu", function (e) {
             e.preventDefault(); // Prevent the context menu from appearing
@@ -326,3 +326,4 @@
 </body>
 
 </html>
+
