--- a/jk&co_rtb_15oct.html
+++ b/jk&co_rtb_15oct.html
@@ -43,10 +43,16 @@
 <div class="row">
              
             
-    <div class="col-md-12">
+    <div class="col-md-6">
       <div class="form-group">
         <label for="caller_id">Phone no. (ex. 7026435297)</label>
         <input type="text" class="form-control" id="caller_id" placeholder="CallerID" required>
+      </div>
+    </div>
+  <div class="col-md-6">
+      <div class="form-group">
+        <label for="zip">Zipcode</label>
+        <input type="text" class="form-control" id="zip" placeholder="5 digit zipcode" required>
       </div>
     </div>
 </div>
@@ -69,7 +75,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/jk&co_rtb_15oct.js?ver=1"></script>
+  <script src="https://js.formifyweb.com/jk&co_rtb_15oct.js?ver=2"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
@@ -79,4 +85,5 @@
     </script>
 </body>
 </html>
+
 
