--- a/phoenix_aca_tdpingpost20oct.html
+++ b/phoenix_aca_tdpingpost20oct.html
@@ -170,7 +170,7 @@
     </label>
 
     <input
-      type="datetime-local"
+      type="date"
       class="form-control"
       id="dob"
       name="Date of Birth"
@@ -282,3 +282,4 @@
  
 </body>
 </html>
+
